--- a/Index.html
+++ b/Index.html
@@ -26,5 +26,10 @@
                 <a href="" class="hero-btn">Click here to read more</a>
             </div>
         </section>
-    </body>
+        <h1>first-task image</h1>
+<div><img src="ibs-image.jfif" alt="Hello World from Space"
+style="width:100%;max-width:960px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
+</body>
 </html>
